# Proyecto-de-software

./: .gitignore  README.md  calculadora.py  main.py  package-lock.json  package.json  tailwind.config.cjs
Calculadora/: main.py
admin/: .gitignore  FLUJO_SOLICITUDES_ROLES.md  MAPA_PROYECTO_FEATURE_FLAGS.md  MAPA_PROYECTO_ROLES_PERMISOS.md  README.md  main.py  pyproject.toml
admin/src/core/: auth.py  board_sites.py  board_tags.py  board_usuarios.py  database.py  formularios.py  seeds.py  siteForm.py  sites_history.py  tagForm.py
admin/src/core/Entities/: __init__.py  feature_flag.py  image.py  permission.py  review.py  role.py  site.py  site_history.py  tag.py  user.py
admin/src/core/services/: upload_service.py
admin/src/core/services/feature_flags/: __init__.py
admin/src/core/services/history/: __init__.py
admin/src/core/services/reviews/: __init__.py
admin/src/core/services/roles/: __init__.py
admin/src/core/services/sites/: __init__.py
admin/src/core/services/tags/: __init__.py
admin/src/core/services/users/: __init__.py
admin/src/core/sites/: __init__.py
admin/src/web/: __init__.py  config.py  config.py.example  helpers.py  storage.py
admin/src/web/controllers/: errors.py  feature_flags.py  gestion_roles.py  login.py  reviews.py  sites.py  sites_history.py  tags.py  users.py
admin/src/web/controllers/api/: __init__.py  auth.py  loginGoogle.py  maintenance.py  reviews.py  sites.py  tags.py  users.py
admin/src/web/controllers/api/schemas/: site.py
admin/src/web/handlers/: errors.py
admin/src/web/static/: styles.css
admin/src/web/templates/: basic-structure-w-footer.html  basic-structure-w-sidebar.html  errors.html  home.html  layout.html  tables_base.html
admin/src/web/templates/administration/: feature_flags.html  mangement.html  permissions.html  role_detail.html  roles.html  users_roles.html
admin/src/web/templates/common/: _form.html  actions.html  checkbox_filter.html  delete_modal.html  filters_sidebar.html  order_selector.html  tables_base.html
admin/src/web/templates/common/history/: changes_card.html
admin/src/web/templates/errores/: 401.html  404.html  500.html  maintenance.html
admin/src/web/templates/login/: login_usuario.html
admin/src/web/templates/reviews/: detail.html  reviews_table.html
admin/src/web/templates/site_history/: changes_list.html
admin/src/web/templates/sites/: add_site.html  detail.html  modify_site.html  site_form.html  sites_table.html
admin/src/web/templates/tags/: add_tag.html  edit_tag.html  tag_form.html  tags.html  tags_table.html
admin/src/web/templates/usuarios/: agregar_usuario.html  detalle_usuario.html  editar_usuario.html  editar_usuario_admin.html  modulo_usuarios.html  tabla_usuarios.html
admin/tests/: test_home.py
calculadora/: main.py
portal/: .env.example  .env.production  .gitignore  README.md  index.html  (+3 more)
(+41 files in other folders)
