[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "Ulises Rabasa",email = "rabasaulises@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "python-dotenv",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.poetry]
packages = [{include = "web", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
