[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "Ulises Rabasa",email = "rabasaulises@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0.0",
    "python-dotenv",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    
]

[tool.poetry.group.test.dependencies]
    pytest="^8.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry]
packages = [{include = "web", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
