[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "Ulises Rabasa",email = "rabasaulises@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask>=2.0.0",
    "python-dotenv",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "minio (>=7.2.18,<8.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "google-auth (>=2.43.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    
]

[tool.poetry.group.test.dependencies]
    pytest="^8.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry]
packages = [{include = "web", from = "src"}]

[tool.poetry.scripts]
start = "main:main"
dev = "main:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
